@@ -50,6 +50,8 @@ extern "C" {
 #define T3_ERR_NO_SYNTAX (-94)
 /** Error code: a 'use' directive references a non-existing define. */
 #define T3_ERR_UNDEFINED_USE (-93)
+/** Error code: an 'extract' directive uses an invalid name. */
+#define T3_ERR_INVALID_NAME (-92)
 /*@}*/
 
 /** @name Flags for ::t3_highlight_load. */
